
2021-09-26  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (create_implicit_picture): PICTURE is mandatory
	  for report description entries with SOURCE or SUM clause

2021-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_const_length): ensure we actually have a valid
	  tree to build the length of, fixing #769 SIGSEGV with invalid code

2021-09-22  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l, cobc.c: fix ODOSLIDE directive

2021-09-21  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (cb_param_size), parser.y: new enum instead of single defines,
	  including new CB_SIZE_UNSET and partial addition CB_SIZE_16/CB_SIZE_32
	* tree.c (set_sign_and_size_from_parameter_field): extracted from
	  (output_call_protocast, output_call_by_value_args)
	* tree.c (get_size_parameter_type): extracted from (output_call_protocast,
	  output_call_by_value_args, try_get_by_value_parameter_type)

2021-09-20  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_abort, abort_if_too_many_continuation_lines,
	  cobc_tree_cast_error): use common diagnostic format for internal errors
	* tree.c (cb_build_call_parameter), tree.h, parser.y: extracted from
	  parser, internally convert BY VALUE ZERO to BY VALUE 0
	* parser.y (call_param): added MicroFocus SIZE IS clause for CALL BY VALUE,
	  but deactivated because of reduce/reduce conflicts -> needs dialect
	  option and scanner adjustment or drop of OpenCOBOL SIZE IS extension

2021-09-19  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: let DISPLAY OMITTED be handled identical
	  to common display sources: as the entry of a list; removing the
	  need to cast and extra check during the validation

2021-09-17  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: some minor conflicts "resolved", support of old extension
	  SCREEN SECTION VALUE without "VALUE", fixed ACU's PROPERTY xyz ARE
	* warning.def: new option cb_warn_repository_checks (defaults to on)